Avoid truncating the bottom article sidebar entry
#182

--- a/stylesheets/article-sidebar.scss
+++ b/stylesheets/article-sidebar.scss
@@ -8,6 +8,10 @@
   -webkit-overflow-scrolling: touch;
   overflow-x:hidden;
 
+  .post:last-child {
+    margin-bottom: 32px;
+  }
+
   .article {
     padding: 15px 15px 25px 15px;
     box-sizing:border-box;
